--- a/_posts/2020-07-14-blog-open.md
+++ b/_posts/2020-07-14-blog-open.md
@@ -1,22 +1,11 @@
 ---
-title : "축*블로그 개업*"
+title : "블로그 준비중"
 tag : 
     - blog
 ---
-블로그 준비 후기
+블로그 준비
 
 > 이 글은 미완성입니다.
 
 ## 이 블로그의 목표
-### 깃허브 블로그 만드는 법
-- 준비방법
-    1. *ruby*를 깐다.
-    2. *jekyll*도 깐다.
-    3. *git*도 깐다.
-    4. *git*을 열심히 배워본다.
-    - *markdown*을 배워서 해봐따
-
-- 대충 내 github링크 [깃허브 내꺼]()
-
-- 끝
 
